# egmoney

./: Makefile.am  README.md  checkout_prepare  configure.ac
egm-cli/: Makefile.am  append.c  egm_cli.h  html.c  main.c  print.c
egm-qt/: egmclass.py  server.py
etc/: acct_thoughts.c  blockchain_thoughts.c  daemon_thoughts.c  notes.txt
include/: Makefile.am  egmoney.h
lib/: Makefile.am  acct.c  acct_readdb.c  acct_writedb.c  date_range.c  egm_internal.h  egm_struct.c  egmio.c  err.c  journal.c  journal_readdb.c  journal_writedb.c
scripts/: Makefile.am  common.css  completion_install  egm-cli  egm-info
